# Deepseek-tui-everywhere

./: Cargo.toml  README.md
crates/feishu-bridge/: Cargo.toml  feishu.toml
crates/feishu-bridge/src/: config.rs  main.rs
crates/feishu-bridge/src/deepseek/: client.rs
crates/feishu-bridge/src/feishu/: auth.rs  event.rs  message.rs  mod.rs
integrations/feishu-bridge-python/src/: bot.py
integrations/telegram-bridge/: .env.example  README.md  package.json
integrations/telegram-bridge-python/src/: bot.py
integrations/telegram-bridge/scripts/: validate-config.mjs
integrations/telegram-bridge/src/: index.mjs  lib.mjs
integrations/telegram-bridge/test/: lib.test.mjs
kiLee-agent/: .gitignore  KILEE.md  README.md  pyproject.toml
kiLee-agent/kilee/: __init__.py  agent.py  compressor.py  config.py  hooks.py  main.py  schema.py  setup.py  stuck.py  theme.py  tips.py  toolspec.py
kiLee-agent/kilee/integrations/: __init__.py
kiLee-agent/kilee/integrations/feishu/: .env.example  __init__.py  bot.py  env.py
kiLee-agent/kilee/integrations/telegram/: .env.example  README.md  __init__.py  env.py
kiLee-agent/kilee/pipeline/: __init__.py  context.py  scheduler.py  stage.py
kiLee-agent/kilee/pipeline/stages/: __init__.py  llm_stage.py
kiLee-agent/kilee/tools/: __init__.py  clarify.py  execute_bash.py  fs_read.py  fs_write.py  memory.py  timestamp.py  todo.py  web_search.py
