[project]
name = "kilee-agent"
version = "0.5.0"
description = "A DeepSeek-powered AI agent for your terminal"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=20.0", "python-dotenv>=1.0.0"]
feishu = ["lark-oapi>=1.4.0", "python-dotenv>=1.0.0"]

[project.scripts]
kilee = "kilee.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["kilee"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
