[package]
name = "deepseek-feishu-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Feishu/Lark bot bridge for DeepSeek-TUI"

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sha2.workspace = true
url.workspace = true
futures-util.workspace = true
base64.workspace = true
tokio-tungstenite.workspace = true
